--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
     <header id="header" class="header  text-center md:pt-16 lg:text-left xl:pt-10 xl:pb-8 flex  flex-row  " >
         <section  class="my-10 "  style=" margin: auto;">
             <div class="container mt-2 pt-20 ">
-                <h4 class="my-4 text-center lg:max-w-xl lg:mx-auto"> Our Family grow bigger with our beloved clients</h4>
+                <h4 class="my-4 text-center lg:max-w-xl lg:mx-auto text-white"> Our Family grow bigger with our beloved clients</h4>
 
                <div class="container " style="max-width:700px;">
                 
