--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     <link rel='stylesheet' id='intl-tel-input-css'
         href='/mystickyelements-pro/intl-tel-input-src/build/css/intlTelInput.css?ver=2.0.7' type='text/css'
         media='all' />
+    <style> *{
+    outline:none;
+}
+    </style>
     <style>
         form#stickyelements-form input::-moz-placeholder {
             color: #4F4F4F;
